--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 /* header */
 header {
-   background-color: #0080ff;
+   /* background-color: #0080ff; */
    position: fixed;
    color: white;
    width: 100%;
@@ -48,7 +48,7 @@ header #web_header nav ul {
    gap: 30px;
 }
 header #web_header nav ul li {
-   font-size: 20px;
+   font-size: 16px;
    font-weight: bold;
    line-height: 40px;
 }
@@ -57,6 +57,12 @@ header #web_header .user {
    display: flex;
    line-height: 40px;
    gap: 10px;
+}
+header #web_header .user .login {
+   font-size: 12px;
+}
+header #web_header .user .join {
+   font-size: 12px;
 }
 header #web_header .user .search {
    background-color: white;
@@ -105,18 +111,16 @@ main #INFO .info_img {
 main #VALUE {
    display: flex;
    flex-wrap: wrap;
-   gap: 30px;
    padding: 40px;
    justify-content: space-between;
 }
-
 main #VALUE article {
    width: 22%;
+   min-width: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
-   padding: 20px;
 }
 
 main #VALUE article img {
@@ -147,6 +151,86 @@ main #VALUE article p {
    font-size: 18px;
    font-weight: 500;
 }
+
 /* main - TREND */
+main #TREND {
+   display: flex;
+   flex-direction: column;
+   gap: 70px;
+   align-items: center;
+   padding: 40px;
+}
+
+main #TREND .top {
+   display: flex;
+   width: 100%;
+   gap: 50px;
+   align-items: center;
+   justify-content: center;
+}
+main #TREND .top img {
+   width: 300px;
+}
+main #TREND .top .trend_content {
+   display: flex;
+   gap: 10px;
+   flex-direction: column;
+   width: 35%;
+}
+
+main #TREND .top .trend_content p:first-child {
+   font-size: 30px;
+   margin: 5px 0;
+   font-weight: 500;
+}
+main #TREND .top .trend_content p {
+   font-size: 20px;
+}
+main #TREND .top .trend_content p span {
+   font-size: 12px;
+   color: #888;
+}
+main #TREND .top .trend_content p:nth-child(3) {
+   margin-bottom: 20px;
+}
+
+main #TREND .top .trend_content div {
+   margin-bottom: 10px;
+}
+main #TREND .top .trend_content div span {
+   background-color: #f5f5f5;
+   padding: 5px 10px;
+   border-radius: 20px;
+   color: #707070;
+}
+main #TREND .top .trend_content div button {
+   background-color: #0080ff;
+   color: white;
+   padding: 5px 15px;
+   border: none;
+   border-radius: 20px;
+   cursor: pointer;
+}
+
+main #TREND .bottom {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 40px;
+   justify-content: center;
+   width: 100%;
+}
+
+main #TREND .bottom article {
+   width: 18%;
+   min-width: 200px;
+   display: flex;
+   justify-content: center;
+}
+
+main #TREND .bottom article img {
+   width: 100%;
+   height: auto;
+   object-fit: cover;
+}
 
 /* main - EVENT */
