--- a/css/search.css
+++ b/css/search.css
@@ -4,14 +4,79 @@
    box-sizing: border-box;
    list-style: none;
 }
+a {
+   color: white;
+   text-decoration: none;
+   cursor: pointer;
+}
 body {
    background-color: aliceblue;
 }
 header {
    margin: 0 auto;
    padding: 30px;
+   border-bottom: 1px solid #999999;
+   display: flex;
+   flex-direction: column;
+   gap: 30px;
 }
-
+header .back {
+   text-align: center;
+}
+header a {
+   background-color: #0080ff;
+   font-size: 18px;
+   border-radius: 20px;
+   padding: 10px 20px;
+}
 header h1 {
    text-align: center;
+   font-size: 40px;
+}
+header .search_box {
+   text-align: center;
+   display: flex;
+   justify-content: center;
+   gap: 30px;
+}
+header .search_box input {
+   width: 400px;
+   height: 40px;
+   padding: 10px;
+   font-size: 16px;
+}
+header .search_box button {
+   color: white;
+   width: 60px;
+   height: 40px;
+   font-size: 16px;
+   background-color: #0080ff;
+   border: 0;
+   border-radius: 10px;
+}
+main {
+   padding: 30px;
+}
+main .search_wrap {
+   max-width: 1200px;
+   margin: 0 auto;
+}
+
+main ul li {
+   display: flex;
+   gap: 20px;
+   border-bottom: 1px solid black;
+   padding: 30px;
+}
+main ul li img {
+   width: 150px;
+}
+main ul li .search_content {
+   padding: 20px;
+   font-size: 20px;
+   color: #333333;
+}
+main ul li .search_content p:first-child {
+   font-size: 24px;
+   color: black;
 }
