--- a/css/header.css
+++ b/css/header.css
@@ -88,16 +88,21 @@ header #mobile_menu .menu_content .user {
    display: flex;
    flex-direction: column;
    gap: 20px;
-}
-.login,
-.join {
    text-align: right;
    padding-right: 10px;
 }
-header #mobile_menu .menu_content .user .search {
+header #mobile_menu .menu_content .user a {
    background-color: #e6e6e6;
-   padding: 10px 15px;
+   padding: 15px;
    border-radius: 20px;
+}
+header #mobile_menu .menu_content .user .login {
+   margin-top: 10px;
+}
+header #mobile_menu .menu_content .user a img {
+   top: 50%;
+   position: relative;
+   transform: translateY(-30%);
 }
 header #mobile_menu nav {
    padding: 20px;
@@ -110,6 +115,12 @@ header #mobile_menu nav ul li {
 }
 header #mobile_menu nav ul li a {
    color: black;
+}
+/* Tab */
+@media (min-width: 768px) {
+   header #mobile_menu {
+      display: none;
+   }
 }
 /* mobile */
 @media (max-width: 768px) {
