--- a/css/search.css
+++ b/css/search.css
@@ -1,8 +1,17 @@
+@font-face {
+   font-family: "Pretendard-Regular";
+   src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+      format("woff");
+   font-weight: 400;
+   font-style: normal;
+}
+
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
+   font-family: "Pretendard-Regular";
 }
 a {
    color: white;
@@ -10,7 +19,7 @@ a {
    cursor: pointer;
 }
 body {
-   background-color: aliceblue;
+   background-color: rgb(241, 241, 241);
 }
 header {
    margin: 0 auto;
@@ -62,11 +71,12 @@ main .search_wrap {
    margin: 0 auto;
 }
 
-main ul li {
+main ul li a {
    display: flex;
    gap: 20px;
    border-bottom: 1px solid black;
    padding: 30px;
+   justify-content: space-between;
 }
 main ul li img {
    width: 150px;
@@ -75,8 +85,63 @@ main ul li .search_content {
    padding: 20px;
    font-size: 20px;
    color: #333333;
+   width: 80%;
+}
+main ul li .search_content p {
+   margin-bottom: 5px;
 }
 main ul li .search_content p:first-child {
    font-size: 24px;
+   margin-bottom: 10px;
    color: black;
+}
+
+main .page {
+   text-align: center;
+   padding: 20px;
+}
+main .page button {
+   width: 50px;
+   height: 30px;
+   margin: 0px 10px;
+}
+
+/* Tab */
+@media (max-width: 1024px) {
+   main ul li .search_content {
+      padding: 20px;
+      font-size: 18px;
+      color: #333333;
+      width: 80%;
+   }
+   main ul li .search_content p:first-child {
+      font-size: 22px;
+      color: black;
+   }
+}
+
+/* mobile */
+@media (max-width: 768px) {
+   header h1 {
+      text-align: center;
+      font-size: 30px;
+   }
+   main ul li img {
+      width: 100px;
+   }
+   main ul li .search_content {
+      padding: 20px;
+      font-size: 14px;
+      color: #333333;
+      width: 80%;
+   }
+   main ul li .search_content p {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+   }
+   main ul li .search_content p:first-child {
+      font-size: 16px;
+      color: black;
+   }
 }
