--- a/css/search.css
+++ b/css/search.css
@@ -75,7 +75,7 @@ main ul li a {
    display: flex;
    gap: 20px;
    border-bottom: 1px solid black;
-   padding: 30px;
+   padding: 30px 0px;
    justify-content: space-between;
 }
 main ul li img {
@@ -129,6 +129,12 @@ main .page button {
    main ul li img {
       width: 100px;
    }
+   header .search_box input {
+      width: 200px;
+   }
+   header .search_box {
+      gap: 10px;
+   }
    main ul li .search_content {
       padding: 20px;
       font-size: 14px;
@@ -143,5 +149,9 @@ main .page button {
    main ul li .search_content p:first-child {
       font-size: 16px;
       color: black;
+   }
+   header .search_box button {
+      width: 50px;
+      font-size: 14px;
    }
 }
